src/views/snapshots/git_local_review__views__review_details_view__tests__review_details_view_render_loaded_state.snap
---
source: src/views/review_details_view.rs
expression: render_app_to_terminal_backend(app)
---
"┌ Review Details ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│┌ Title ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││main (unknown) -> default (unknown)                                                                                                                         ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Diff (line 1/1, scroll 1/1) ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││Missing SHA information - cannot generate diff.                                                                                                             ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
