src/views/snapshots/git_local_review__views__review_details_view__tests__review_details_view_render_loaded_state_diff_init.snap
---
source: src/views/review_details_view.rs
expression: render_app_to_terminal_backend(app)
---
"┌ Review Details ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│┌ Title ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││main (unknown) -> default (unknown)                                                                                                                         ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││Init diff...                                                                                                                                                ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"││                                                                                                                                                            ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
