src/views/snapshots/git_local_review__views__review_details_view__tests__review_details_view_render_loaded_state_diff_loaded_no_files.snap
---
source: src/views/review_details_view.rs
expression: render_app_to_terminal_backend(app)
---
"┌ Review Details ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│┌ Title ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││main (unknown) -> default (unknown)                                                                                                                         ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Not Viewed [ACTIVE] ─────────┐┌ Content ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││                              ││No diff to display                                                                                                          ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"│└──────────────────────────────┘│                                                                                                                            ││"
"│┌ Viewed ──────────────────────┐│                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"│└──────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
