src/views/snapshots/git_local_review__views__review_details_view__tests__review_details_view_render_loaded_state_diff_loaded_with_files.snap
---
source: src/views/review_details_view.rs
expression: render_app_to_terminal_backend(app)
---
"┌ Review Details ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│┌ Title ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││main (unknown) -> default (unknown)                                                                                                                         ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Not Viewed [ACTIVE] ─────────┐┌ test_file.txt (6 lines) ───────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││>  test_file.txt              ││  @@ -1,3 +1,4 @@                                                                                                           ││"
"││                              ││   # Test Repository                                                                                                        ││"
"││                              ││  +                                                                                                                         ││"
"││                              ││   This is a test file                                                                                                      ││"
"││                              ││  -Old line to remove                                                                                                       ││"
"││                              ││  +New line to add                                                                                                          ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"│└──────────────────────────────┘│                                                                                                                            ││"
"│┌ Viewed ──────────────────────┐│                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"││                              ││                                                                                                                            ││"
"│└──────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
